@@ -1,0 +1,1 @@
+ALTER TABLE account_balance MODIFY COLUMN modified_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP;
