@@ -1,0 +1,1 @@
+ALTER TABLE account_balance_transaction MODIFY COLUMN event_time TIMESTAMP DEFAULT CURRENT_TIMESTAMP;
