@@ -1,0 +1,1 @@
+ALTER TABLE portfolio_balance_daily_history MODIFY COLUMN event_date DATE DEFAULT (CURRENT_DATE());
