@@ -1,0 +1,1 @@
+ALTER TABLE portfolio_follower MODIFY COLUMN created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP;
