@@ -1,0 +1,1 @@
+ALTER TABLE portfolio_member MODIFY COLUMN created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP;
