@@ -1,0 +1,1 @@
+ALTER TABLE portfolio_stock MODIFY COLUMN created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP;
