@@ -1,0 +1,1 @@
+ALTER TABLE user MODIFY COLUMN created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP;
